--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -6,6 +6,7 @@
   * Sistema ainda permite entrada de veículos mensalista como rotativo
 
 ==Melhorias==
+  * Exibir lista de RPS gerada a quase 10 dias e que não foram enviadas para a prefeitura.
   * Lista de carros liberados no dia
   * Opção para cadastrar "Crédito/Saldo Devedor" para os rotativos
   * Tornar a coluna des_placa como unique na tabela fla_clientes
