--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -4,6 +4,10 @@
   * Verificar segurança de acesso as páginas sem autenticação
   * Verificar layout padrão em todas as telas
   * Sistema ainda permite entrada de veículos mensalista como rotativo
+  * Colocar relógio dinâmico na tela principal
+  * Criar relatório de mensalistas
+  * Criar paginação na lista de clientes
+  * Criar ordenação dinâmica na lista de clientes e na lista de veículos estacionados
 
 ==Melhorias==
   * Exibir lista de RPS gerada a quase 10 dias e que não foram enviadas para a prefeitura.
