--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -4,10 +4,11 @@
   * Verificar segurança de acesso as páginas sem autenticação
   * Verificar layout padrão em todas as telas
   * Sistema ainda permite entrada de veículos mensalista como rotativo
-  * Colocar relógio dinâmico na tela principal
   * Criar relatório de mensalistas
-  * Criar paginação na lista de clientes
   * Criar ordenação dinâmica na lista de clientes e na lista de veículos estacionados
+  * Problemas ao não encerrar o aplicativo e deixa-lo de um dia para o outro, está duplicando o número de cartão
+  ** Tornar o campo 'cod_cartao" como único
+  *** Preparar rotina para alterar cadastros com cod_cartao duplicado
 
 ==Melhorias==
   * Exibir lista de RPS gerada a quase 10 dias e que não foram enviadas para a prefeitura.
@@ -16,7 +17,6 @@
   * Tornar a coluna des_placa como unique na tabela fla_clientes
   * Disponibilizar no "Dashboard" lista de mensalistas com mensalidade "A vencer" e "Vencidos"
   * Permitir alterar/acrescentar dados de clientes durante geração do arquivo de lote
-  * Incluir relatório de mensalidades recebidas
   * RPS
     * No módulo de RPS, ter opção de visualizar recibo PDF da RPS
     * Não ter opção de escolher qual RPS enviar para prefeitura (toda RPS gerada deve ser enviada para a prefeitura)
