--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -8,7 +8,8 @@
   * Criar ordenação dinâmica na lista de clientes e na lista de veículos estacionados
   * Problemas ao não encerrar o aplicativo e deixa-lo de um dia para o outro, está duplicando o número de cartão
   ** Tornar o campo 'cod_cartao" como único
-  *** Preparar rotina para alterar cadastros com cod_cartao duplicado
+  `***` Preparar rotina para alterar cadastros com cod_cartao duplicado
+  * Colocar opção de impressão em modo texto ao invés de PDF
 
 ==Melhorias==
   * Exibir lista de RPS gerada a quase 10 dias e que não foram enviadas para a prefeitura.
@@ -28,4 +29,3 @@
   * Opção de login de funcionário há uma ou mais filiais
   * Adaptar tabelas para suporte a multiplos locais
   * Providenciar arquivos de icone.
-  * Providenciar site.
